--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>ウチの犬紹介</title>
 <meta name="keyword" content="">
 <meta name="description" content="">
-<link href="style2.css" rel="stylesheet" media="all">
+<link href="style.css" rel="stylesheet" media="all">
 </head>
 
 <body id="modoru">
