--- a/si-pudog.html
+++ b/si-pudog.html
@@ -5,12 +5,12 @@
 <title>シープドッグ</title>
 <meta name="keyword" content="">
 <meta name="description" content="">
-<link href="style2.css" rel="stylesheet" media="all">
+<link href="style.css" rel="stylesheet" media="all">
 <link href="dogs.css" rel="stylesheet" media="all">
 </head>
 
 <header>
-<h1 id="top"><a href="index2.html">ウチの犬紹介</a></h1>
+<h1 id="top"><a href="index.html">ウチの犬紹介</a></h1>
 </header>
 
 <nav>
@@ -23,7 +23,7 @@
 
 <div id="pan">
     <ul>
-        <li><a href="index2.html">ホーム</a></li>
+        <li><a href="index.html">ホーム</a></li>
         <li><a href="dogs.html">我が家の犬たち</a></li>
         <li>シープドッグ</li>
     </ul>
