--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,7 @@
 <title>ウチの犬紹介</title>
 <meta name="keyword" content="">
 <meta name="description" content="">
-<link href="style2.css" rel="stylesheet" media="all">
+<link href="style.css" rel="stylesheet" media="all">
 </head>
 
 <body id="modoru">
@@ -18,7 +18,7 @@
 <img src="https://www.f-counter.net/j/66/1766935891/" alt="アクセスカウンター" id="count"></a>
 人目の訪問者です☆
 
-<h1 id="top"><a href="index2.html">ウチの犬紹介</a></h1>
+<h1 id="top"><a href="index.html">ウチの犬紹介</a></h1>
 
 <p>我が家の犬達を紹介します！</p>
 </header>
@@ -33,7 +33,7 @@
 
 <div id="pan">
     <ul>
-        <li><a href="index2.html">ホーム</a></li>
+        <li><a href="index.html">ホーム</a></li>
         <li>作者紹介</li>
     </ul>
 </div>
