--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ウチの犬紹介</title>
 <meta name="keyword" content="">
-<meta name="description" content="">
+<meta name="description" content="我が家の犬達を紹介します！">
 <link href="style.css" rel="stylesheet" media="all">
 </head>
 
