--- a/intro.html
+++ b/intro.html
@@ -4,7 +4,8 @@
 <meta charset="UTF-8">
 <title>ウチの犬紹介</title>
 <meta name="keyword" content="">
-<meta name="description" content="">
+<meta name="description" content="我が家の犬達を紹介します！">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="style.css" rel="stylesheet" media="all">
 </head>
 
