--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ウチの犬紹介</title>
-<meta name="keyword" content="">
 <meta name="description" content="我が家の犬達を紹介します！">
-<link href="style.css" rel="stylesheet" media="all">
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body id="modoru">
@@ -14,54 +13,59 @@
 <a href="#modoru" id="ue">TOP</a>
 
 <header>
+  <p class="counter">
+    あなたは
+    <img src="https://www.f-counter.net/j/66/1766935891/" alt="アクセスカウンター" id="count">
+    人目の訪問者です☆
+  </p>
 
-あなたは
-<img src="https://www.f-counter.net/j/66/1766935891/" alt="アクセスカウンター" id="count"></a>
-人目の訪問者です☆
-
-<h1 id="top"><a href="index2.html">ウチの犬紹介</a></h1>
-
-<p>我が家の犬達を紹介します！</p>
+  <h1 id="top"><a href="index2.html">ウチの犬紹介</a></h1>
+  <p>我が家の犬達を紹介します！</p>
 </header>
 
 <nav>
-<ol>
-<li><a href="intro.html" class="big">ご挨拶</a></li>
-<li><a href="dogs.html" class="big">我が家の犬たち</a></li>
-<li><a href="profile.html" class="big">作者紹介</a></li>
-</ol>
+  <ol>
+    <li><a href="intro.html" class="big">ご挨拶</a></li>
+    <li><a href="dogs.html" class="big">我が家の犬たち</a></li>
+    <li><a href="profile.html" class="big">作者紹介</a></li>
+  </ol>
 </nav>
-
 
 <main>
 
-<input type="checkbox" id="kirikae" hidden>
-<label for="kirikae" class="syasinn">
-    <img src="inugoya.png" class="off">
-    <img src="dog-iru.png" class="on">
-</label> 
+  <input type="checkbox" id="kirikae" hidden>
+  <label for="kirikae" class="syasinn">
+    <img src="inugoya.png" class="off" alt="">
+    <img src="dog-iru.png" class="on" alt="">
+  </label>
 
-<section id="news">
+  <section id="news">
     <h2>お知らせ</h2>
     <ul>
-        <li>コメント欄を追加しました！</li>
+      <li>コメント欄を追加しました！</li>
     </ul>
-</section>
+  </section>
 
-<p id="toukou"><a href="https://forms.gle/Cb8pRus88Y1WtbHXA" target="_blank" rel="noopener">コメントを投稿</a></p>
+  <p id="toukou">
+    <a href="https://forms.gle/Cb8pRus88Y1WtbHXA" target="_blank" rel="noopener">
+      コメントを投稿
+    </a>
+  </p>
 
-<div class="waku">
-<iframe
-src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS45osVlj3XtaHn-Gzx_rajKJCqOpnibZs-RLvJocJm584Wwkcv85BoM_OWib4AzTgwLsgZ1VBBJg-7/pubhtml?gid=204191014&single=true" class="kome">
-</iframe>
-</div>
+  <div class="waku">
+    <div class="iframe-wrap">
+      <iframe
+        src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS45osVlj3XtaHn-Gzx_rajKJCqOpnibZs-RLvJocJm584Wwkcv85BoM_OWib4AzTgwLsgZ1VBBJg-7/pubhtml?gid=204191014&single=true"
+        loading="lazy">
+      </iframe>
+    </div>
+  </div>
 
 </main>
 
-
 <footer>
-<small>Copyright &copy; 犬山太郎 All Rights Reserved.</small>
-
+  <small>Copyright &copy; 犬山太郎 All Rights Reserved.</small>
 </footer>
+
 </body>
 </html>
