--- a/si-pudog.html
+++ b/si-pudog.html
@@ -10,6 +10,7 @@
 <link href="dogs.css" rel="stylesheet" media="all">
 </head>
 
+<body>
 <header>
 <h1 id="top"><a href="index.html">ウチの犬紹介</a></h1>
 </header>
@@ -30,7 +31,7 @@
     </ul>
 </div>
 
-<body>
+
 <main>
 
 <section>
@@ -41,7 +42,7 @@
     ラフ・コリーとよく似た外見を持つが、より小型である。</p>
 </section>
 
-<button onclick="history.back()">→戻る<button>
+<button onclick="history.back()">→戻る</button>
 </main>
 
 <footer>
