--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     人目の訪問者です☆
   </p>
 
-  <h1 id="top"><a href="index2.html">ウチの犬紹介</a></h1>
+  <h1 id="top"><a href="index.html">ウチの犬紹介</a></h1>
   <p>我が家の犬達を紹介します！</p>
 </header>
 
